css/style.css
#rednote {
  font-color: red;
}

.advt_icon_danger {
  color: red;
}

li.adlistItem {
    padding-bottom:10px;
}
li.adlistItem a {
    color: inherit;
    text-decoration:none;
}

/* Style for the add item in the list */
div.adlistItem {
  cursor: pointer;
  position:relative;
  border: 2px solid #ddd;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  width: 100%;
  height: 100%;
}
div.adlistItem div.adType {
  /* Apparently need to account for the 2px border in the parent div */
  border-radius: 8px 8px 0px 0px;
  -webkit-border-radius: 8px 8px 0px 0px;
  width: 100%;
  padding-bottom:1px;
}

.adlistItem .adSubject,
.adlistItem .adPrice
{
    font-weight: bold;
}
.adlistItem .catName,
.adlistItem .adDate
{
    font-size: smaller;
}

/* Styles for the category box displays */
.adcat {
  position:relative;
  float: left; /* grouped shared styles */
  font-size: 1em;
  padding: 0.5em 0.15em;
  margin: 1em 0.15em -0.5em 0.15em; 
  border: 3px outset #2e8b57;
  width:125px;
  /*height:180px;*/
  min-height:180px;
  font-family:Helvetica;
  background: #90ee90;  /* default */
  cursor: pointer;
}

.adcat img {
  margin-left:auto;
  margin-right:auto;
}

.adcat div.catTitle {
  font-size: 1.3em;
  font-weight: bold;
  text-align: center;
  font-color:#000000;
  margin-bottom:2px;
}

.adcat div.catAdCount {
  position:absolute;
  bottom:3px;
  left:3px;
}

.subcatTitle {
  float: left; /* grouped shared styles */
  font-size: 1em;
  padding: .25em 0.25em .5em .25em;
  margin: 0.15em 0.15em 0.15em 0.15em; 
  border: 3px outset #2e8b57;
  min-width:125px;
  height:12px;
  font-family:Helvetica;
  font-color:#000000;
  font-weight:bold;
  background: #90ee90;  /* default */
}

.subcatTitle a {
  text-decoration:none;
}

.adcat .catDesc {
  font-size: 1em;
  /*font-weight: bold;*/
  text-align: left;
  font-color:#000000;
  margin-bottom:24px;
}

.catImage {
  text-align: left;
  margin-left:auto;
  margin-right:auto;
  margin-bottom: 10px;
  max-width: 75px;
  max-height: 75px;
}

img.RandBlock {
  /*border-style:outset;
  border-color: red;
  border-width:10px;  */
  margin-left:auto;
  margin-right:auto;
  margin-top:6px;
  display: block;
}


/* Color Picker Styles */
.picker_layer {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	text-decoration: none;
	background-color: #d4d0c8;
	border-width: 1px;
	border-style: solid;
	border-color: #666666;
	overflow: visible;
	height: auto;
	width: auto;
}
.picker_buttons {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	background-color:#d4d0c8;
	border-style:solid;
	border-color:#666666;
	border-width:1px;
	padding:1px;
	cursor:pointer;
	color:#000000;
}
.cell_color {
	cursor:pointer;
	width:9px;
	height:9px;
}
.color_table {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	text-decoration: none;
}
.choosed_color_cell{
	border-style:solid; border-color:#000000; border-width:1px;
}
.default_color_btn{
	width:17px; height:17px;
	background-repeat:no-repeat; background-position:center;
}

.adForm label
{
    /*color: #781351;*/
    width: 16em;
    float: left;
    text-align: right;
    margin-right: 0.5em;
    display: block;
    vertical-align: bottom;
}

.adForm p {
  line-height: 1px;
  margin-top:0px;
}

.adForm td.label {
    width:30%;
    height:25px;
    text-align:left;
    font-weight:bold;
}

.adForm td.input {
    width:40%;
    height:25px;
    text-align:left;
}

.adCatRoot {
    background-color: lightblue;
}

.adBreadcrumb {
    font-weight: bold;
}

#adDetailWrapper {
    position: relative;
    margin-top: 2rem;
}

.adDetailWrapper.v2 {
    display:flex;
}

#adDetailWrapper .adImage {
    float: left;
    margin-right: 20px;
}

#adDetailWrapper .adImage.v2 {
    clear: both;
    float: left;
    margin-right: 20px;
}


#adDetailWrapper .adImage img {
    padding-bottom: 5px;
}

/*#adDetailData {
    float: left;
    min-width: 50%;
    margin-left: 20px;
}*/

.adDetailData.v1 {
    min-width: 20%;
    float:left;
    flex: 1;
}

.adDetailData.v2 {
    min-width: 20%;
    float:left;
    flex: 1;
}

.adDetailData img {
    padding: 5px 0px 0px 9px;
}

#adDetailData .title {
    font-weight: bold;
    margin-right: 3rem;
}

.adTypeHeader {
    font-weight:bold;
}

.adDetailHotTable {
    border: 0px;
    margin-bottom: 2rem;
    width: 100%;
    border-spacing: 0px;
    border-padding: 0px;
}

.adContact {
    width: 70%;
}
#adContact .title {
    padding-right: 3rem;
    width: 20%;
    height: 20px;
}
#adContact .data {
    width: 80%;
    height; 20px;
}

div #adDetailUserLinks {
    float:right;
    white-space: nowrap;
    display: inline-block;
}

#adDetailUserLinks input {
    padding: 5px 0px 0px 9px;
}

/* "No Image Available" text */
.adNoImage {
    size: small;
    color: #808080;
}

.adExpiredText {
    color: red;
}

div.adContact,div.adWhatsHot {
    clear: both;
    width: 100%;
    margin-bottom: 40px;
}

div.adContactItem,div.adWhatsHotItem {
    clear: both;
}

p.title {
    font-weight:bold;
}
div.adContactItem div.label {
    font-weight: bold;
}
div.adContactItem div.label, div.adWhatsHotItem div.label {
    margin-left: 5px;
    float: left;
    width: 50%;
    display: inline;
}

div.adContactItem div.data {
    float: left;
    display: inline;
}

.adMenuActive {
    font-style: italic;
    color: red;
}

div.advtMainImage.v2 {
    height: 320px;
    width: 360px;
}

img.advtMainImage.v2,
img.advtImageThumb.v2 {
    height: 100%;
    width: 100%;
    object-fit: contain;
}

.mainImageWrapper.v2 {
    width: 375px;
}
.advtThumbnails.v2 {
    width: 100%;
    margin-top: 2px;
}
.advtFullDescrip.v2 {
    clear:both;
    margin-bottom: 15px;
}

form#adlistopts h4 {
    margin-bottom: 2px;
}

form#adlistopts div.uk-form-controls input[type="checkbox"] {
    margin-top: 0px;
}
form#adlistopts div.uk-form-controls label {
    font-weight:inherit;
}

ul#imagegrid figure {
    min-width: 125px;
    min-height: 125px;
}

